--- a/demo-cube/packages.config
+++ b/demo-cube/packages.config
@@ -1,4 +1,5 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="nlohmann.json" version="3.7.3" targetFramework="native" />
+  <package id="wxWidgetsTemplate" version="2.5.3" targetFramework="native" />
 </packages>
